# rust_fractals

./: .gitignore  README.md
mandelbrot/: Cargo.toml  package-lock.json
mandelbrot/src/: lib.rs  main.rs
mandelbrot/web/: index.html  index.js  package-lock.json  package.json
mandelbrot/www/: index.html  index.js  package-lock.json  package.json
sierpinski/: Cargo.toml
sierpinski/src/: lib.rs
sierpinski/www/: index.html  index.js  package-lock.json  package.json
